--- a/WebNosology/WebNosology.UI.WebApp/styles/login.css
+++ b/WebNosology/WebNosology.UI.WebApp/styles/login.css
@@ -68,7 +68,7 @@ form {
 }
 
 .user-logon-icon {
-	color: #0097A7; /*#0097A7  #00838F*/
+	color: #00838F; /*#0097A7  #00838F*/
 	margin-left:   140px;
 	margin-bottom: 25px;
 }
