Reworked : make more responsive

--- a/WebNosology/WebNosology.UI.WebApp/pages/shared/default.Master
+++ b/WebNosology/WebNosology.UI.WebApp/pages/shared/default.Master
@@ -2,19 +2,14 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml" >
 
-<head id="Head1" runat="server">
+<head runat="server">
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Высокозатратные нозологии">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Высокозатратные нозологии</title>
-
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
     <%--<link rel="icon" sizes="192x192" href="images/android-desktop.png">--%>
@@ -22,33 +17,41 @@
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Форма входа">
+    
     <%--<link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">--%>
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <%--<meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">--%>
+
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <%--<link rel="shortcut icon" href="images/favicon.png">--%>
     
-    <link rel="stylesheet" href="../../plugins/mdl/material.css"/>
-    <link rel="stylesheet" href="../../styles/login.css"/>  
-    <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../../Content/mdl-v1.0.5/material.min.css"/>
+    <link rel="stylesheet" href="../../styles/main.css"/>  
     
+     <!-- fonts and icons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <%--<link rel="stylesheet" href="../../Content/font-awesome/css/font-awesome.css" />--%>
+    <%--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css" />--%>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
     
     <asp:ContentPlaceHolder ID="head" runat="server">
-    
+        <!-- title goes here -->
     </asp:ContentPlaceHolder>
     
 </head>
 
 <body>
     
-    <div class="logon-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
+    <!-- #LAYOUT -->
+    <div class="default-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
         
-        <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--my mdl-color-text--white">
-            <span class="mdl-layout-title mdl-layout__header-row">Высокозатратные нозологии</span>
+        <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--nos-main mdl-color-text--white">
+            <div class="mdl-layout__header-row header-row--default">
+                <span class="mdl-layout-title">Высокозатратные нозологии</span>
+            </div>
         </header>
       
         <main class="mdl-layout__content">
@@ -57,20 +60,32 @@
             </asp:ContentPlaceHolder>
         </main>
           
+        <!-- #FOOTER -->
         <footer class="mdl-mini-footer">
-            
             <div class="mdl-mini-footer--left-section" >
-                <ul class="mdl-mini-footer--link-list">
-                    <li><a href="http://www.escyug.ru/">ООО "Эскейп-Юг"</a></li>
+
+                <div class="mdl-logo">
+                    
+                    <a href="http://www.escyug.ru/"><i class="fa fa-cube" style="font-size: 25px; color: white"></i>&nbsp ООО "Эскейп-Юг"</a>
+                </div>
+                
+                <ul class="mdl-mini-footer__link-list">
                     <li><a href="http://www.minzdravkk.ru/">Министерство здравоохранения Краснодарского края</a></li>
                 </ul>
+
             </div>
-        </footer>
+        </footer><!-- / #FOOTER -->
           
-    </div>
+    </div><!-- / #LAYOUT -->
     
     <script type="text/javascript" src="../../scripts/jQuery/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="../../plugins/mdl/material.min.js"></script>   
+    <script type="text/javascript" src="../../Content/mdl-v1.0.5/material.min.js"></script>   
+    
+    <script type="text/javascript">
+         function checkPersist() {
+            
+        }        
+    </script>
     
 </body>
 
