--- a/WebNosology/WebNosology.UI.WebApp/pages/shared/main.Master
+++ b/WebNosology/WebNosology.UI.WebApp/pages/shared/main.Master
@@ -3,14 +3,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" >
+
 <head runat="server">
 
-    <title>Высокозатратные нозологии - Главная</title>
+   <%-- <title>Высокозатратные нозологии - Главная</title>--%>
 
-    <link rel="stylesheet" href="../../plugins/mdl/material.css"/>
+    <link rel="stylesheet" href="../../Content/mdl-v1.0.5/material.min.css"/>
     <link rel="stylesheet" href="../../styles/main.css"/>  
-    <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css" />
-    <link rel="Stylesheet" href="../../plugins/jDialog/jDialog.css" />
+    <link rel="Stylesheet" href="../../Content/jDialog/jDialog.css" />
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -33,9 +33,12 @@
 
     <%--<link rel="shortcut icon" href="images/favicon.png">--%>
     
+    <!-- fonts and icons -->
+    <%--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css" />--%>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
-    <%--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />--%>
-    
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     
     </asp:ContentPlaceHolder>
@@ -73,15 +76,15 @@
             </div>
             
             <!-- Start #SUBTITLE -->
-            <div class="mdl-layout__header-row" style="height: 35px;">
-                <i class="fa fa-star"></i>
+            <div class="mdl-layout__header-row wat" style="height: 35px;">
+                <i class="fa fa-star"></i>&nbsp
                 <asp:Label ID="userLevel" runat="server" Text="[user level placeholder]"></asp:Label>
             </div> <!-- / #SUBTITLE -->
             
         </header> <!-- / #HEADER -->
         
-        <!-- Start #SIDE_PANEL (USER INFO, NAVIGATION MENU) -->
-        <div class="nos-drawer mdl-layout__drawer mdl-color-text--white">  
+        <!-- Start #DRAWER (USER INFO, NAVIGATION MENU) -->
+        <div class="nos-drawer mdl-layout__drawer mdl-color-text--white mdl-shadow--4dp">  
             
             <header class="nos-drawer-header">
                 
@@ -138,8 +141,8 @@
     </div>
     
     <script type="text/javascript" src="../../scripts/jQuery/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="../../plugins/mdl/material.js"></script>   
-    <script type="text/javascript" src="../../plugins/jDialog/jDialog.js"></script>
+    <script type="text/javascript" src="../../Content/mdl-v1.0.5/material.js"></script>   
+    <script type="text/javascript" src="../../Content/jDialog/jDialog.js"></script>
     
     <!-- shows up contact info dialog window (side menu in #HEADER) -->
     <script type="text/javascript">
