--- a/WebNosology/WebNosology.UI.WebApp/styles/main.css
+++ b/WebNosology/WebNosology.UI.WebApp/styles/main.css
@@ -1,63 +1,328 @@
-﻿/**
- * Copyright 2015 Google Inc. All Rights Reserved.
+﻿/* TODO : Write comments*/
+
+/**
+ * CONTENTS
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * 
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ * GENERIC
+ * Normalize.css........A level playing field.
+ * Box-sizing...........Better default `box-sizing`.
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * BASE
+ * Headings.............H1–H6 styles.
+ *
+ * OBJECTS
+ * Wrappers.............Wrapping and constraining elements.
+ *
+ * COMPONENTS
+ * Page-head............The main page header.
+ * Page-foot............The main page footer.
+ * Buttons..............Button elements.
+ *
+ * TRUMPS
+ * Text.................Text helpers.
  */
 
+
+
+
+
+/*------------------------------------------------------*\
+    #COLOR - SECTION - set main, help and subhelp colors
+\*------------------------------------------------------*/
+
+/* +-----------------------------------------+ *
+ * |   #00838F; #0097A7; #00BCD4; #37474F;   | *
+ * +-----------------------------------------+ */
+
+.mdl-color-text--nos-main {
+  color: rgb(0,131,143) !important; }
+
+.mdl-color--nos-main {
+  background-color: rgb(0,131,143) !important; }
+
+.mdl-color-text--nos-help {
+  color: rgb(0,151,167) !important; }  
+
+.mdl-color--nos-help {
+  background-color: rgb(0,151,167) !important; }
+
+.mdl-color--nos-subhelp {
+  background-color: rgb(19, 202, 233) !important; }
+
+
+
+
+
+/*-------------------------------------------------------*\
+    #GLOBAL - SECTION
+\*-------------------------------------------------------*/
+
+
 html, body {
-  font-family: 'Roboto', 'Helvetica', sans-serif;
-}
-
-.nos-avatar {
-  width: 48px;
-  height: 48px;
-  border-radius: 24px;
+    font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
 
-.wat {
-    padding: 0 16px 0 15px;
-   
+
+/* +--------------------------------------------------------------+ *
+ * | #HEADER - (.mdl-layout__header) -                            | *
+ * |           - display titles                                   | *
+ * +--------------------------------------------------------------+ */
+
+/* change font size of main title on small screens */
+.mdl-layout.is-small-screen .mdl-layout-title {
+    font-size: 18px;
+ }
+
+
+
+/* +--------------------------------------------------------------+ *
+ * | #TEXTFIELD - (.mdl-textfield) -                              | *
+ * |                  - input textboxes (login, pwd)              | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-textfield--floating-label.is-focused .mdl-textfield__label,
+.mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
+    color: rgb(0,131,143); 
+    font-size: 12px;  
+    top: 4px;
+    visibility: visible; 
+}
+
+.mdl-textfield--floating-label.is-focused .mdl-textfield__expandable-holder .mdl-textfield__label,
+.mdl-textfield--floating-label.is-dirty .mdl-textfield__expandable-holder .mdl-textfield__label {
+    top: -16px; 
+}
+
+.mdl-textfield--floating-label.is-invalid .mdl-textfield__label {
+    color: rgb(222, 50, 38);
+    font-size: 12px; 
+}
+
+.mdl-textfield__label:after {
+    background-color: rgb(0,131,143); 
+    content: '';
+    position: absolute;
+    height: 2px;
+    width:  10px; 
+    left:   45%;
+    bottom: 20px;
+    -webkit-transition-duration: 0.2s;
+            transition-duration: 0.2s;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    visibility: hidden;
+}
+
+/* name class like "user-aut-info" */
+.default-form .mdl-textfield {
+	width: 340px;
 }
 
 @media (max-width: 480px) {
-    .wat {
-        font-size: 12px;
+    .default-form .mdl-textfield {
+	    width: 250px;
     }
 }
 
 
+
+
+
+/*-------------------------------------------------------*\
+    #MAIN_PAGE - SECTION
+\*-------------------------------------------------------*/
+
+
+/* +--------------------------------------------------------------+ *
+ * | #HEADER - (.mdl-layout__header) -                            | *
+ * |           - display titles                                   | *
+ * +--------------------------------------------------------------+ */
+
+/* row that contains user level label */
+.header-row--helper {
+    padding: 0 16px 0 15px;
+}
+
+@media (max-width: 480px) {
+    .header-row--helper {
+        font-size: 12px;
+    }
+}
+
+/* search box */
+.mdl-layout .mdl-layout__header .mdl-textfield {
+    padding-top: 27px;
+}
+
+/* items in context menu */
+.mdl-menu .mdl-menu__item {
+    display: flex;
+    align-items: center;
+}
+
+
+
+/* +--------------------------------------------------------------+ *
+ * | #DRAWER - (.mdl-layout__drawer) -                            | *
+ * |           - side panel menu, contains navigation bar         | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-layout__drawer {
+    border: none;
+}
+    /* user avatar */
+    .mdl-layout__drawer .avatar {
+      margin-bottom: 16px;
+    }
+
+.mdl-drawer__header {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 16px;
+    height: 151px;
+}
+
+.mdl-drawer__header .user-avatar-dropdown {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+/* iOS Safari specific workaround */
+.mdl-layout__drawer .mdl-menu__container {
+    z-index: -1;
+}
+
+.mdl-layout__drawer .nos-navigation {
+    z-index: -2;
+}
+/* END iOS Safari specific workaround */
+
+
+/* +--------------------------------------------------------------+ *
+ * | #DRAWER_NAVIGATION - (.mdl-navigation) (.mdl-layout__drawer) | *
+ * |                      - navigation bar in drawer              | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-layout__drawer .mdl-navigation {
+  flex-grow: 1;
+  background-color:#0097A7;
+}
+
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
+    display: flex !important;
+    flex-direction: row;
+    align-items: center;
+    color: white;
+    font-weight: 500;
+}
+    .mdl-layout__drawer .mdl-navigation .mdl-navigation__link .nav-icon {
+        font-size: 24px;
+        color: white;/*rgba(255, 255, 255, 0.56);*/
+        margin-right: 32px;
+    }
+
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
+    background-color :#00838F;  
+    color: white;
+}
+
+.nav-icon {
+	margin-right: 30px;
+	margin-left: 5px;
+}
+
+
+
+/* +--------------------------------------------------------------+ *
+ * | #DRAWER-BUTTON - (.mdl-layout__drawer-button) -              | *
+ * |                  - menu button shows only on small screens   | *
+ * +--------------------------------------------------------------+ */
+
 .mdl-layout__drawer-button {
     padding-top : 11px;
+    color: rgba(0, 0, 0, 0.54);
 }
 
 .mdl-layout__drawer-button i {
     color: rgba(0, 0, 0, 0.54);
 }
-    
 
-.header-row--default {
-    padding-left: 55px;
+
+
+/* +--------------------------------------------------------------+ *
+ * | #MAIN - (main) -                                             | *      
+ * |         - display particular page content                    | *
+ * +--------------------------------------------------------------+ */
+
+.nos-content {
+    max-width: 1080px;
+}
+	.nos-content a {
+		text-decoration: none;
+		color: rgba(0, 0, 0, 0.54);
+	}
+	
+.nos-docs a {
+	text-decoration: underline;	
+}
+	
+.nos-docs a:hover {
+	text-decoration: none;
+	/*color: #0097A7;*/
+}
+	
+.nos-graphs {
+    padding: 16px 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+    .nos-graph:nth-child(1) {
+        color: #00b9d8;
+    }
+    .nos-graph:nth-child(2) {
+        color: #d9006e;
+    }
+
+/* TODO: Find a proper solution to have the graphs
+ * not float around outside their container in IE10/11.
+ * Using a browserhacks.com solution for now.
+ */
+
+_:-ms-input-placeholder, :root .nos-graphs {
+  min-height: 664px;
+}
+_:-ms-input-placeholder, :root .nos-graph {
+  max-height: 300px;
+}
+/* TODO end */
+
+.content-icon {
+	 margin-right: 10px;
+     /*padding-right: 10px;*/
 }
 
 
-.default-form {
-    width: 340px;
-    margin: 11em auto;
-    padding: 3em 2em 2em 2em;
-    background: #fafafa;
-    border: 1px solid #ebebeb;
-}
+
+
+
+/*-------------------------------------------------------*\
+    #DEFAULT_PAGE - SECTION
+\*-------------------------------------------------------*/
+
+
+/* +--------------------------------------------------------------+ *
+ * | #FOOTER - (.mdl-mini-footer) -                               | *      
+ * |            - show company title and useble links             | *
+ * +--------------------------------------------------------------+ */
     
 .mdl-mini-footer {
 	padding: 16px;
@@ -81,6 +346,38 @@ html, body {
 }
 
 
+
+/* +--------------------------------------------------------------+ *
+ * | #HEADER - (.mdl-layout__header) -                            | *
+ * |           - display site default title                       | *
+ * +--------------------------------------------------------------+ */
+
+/* row that contains main title on default page (login, error) */
+.header-row--default {
+    padding-left: 55px;
+}
+
+
+
+/* +--------------------------------------------------------------+ *
+ * | #MAIN - (main) (.mdl-layout__content) -                      | *
+ * |         - display site default title                         | *
+ * +--------------------------------------------------------------+ */
+
+.default-form {
+    width: 340px;
+    margin: 11em auto;
+    padding: 3em 2em 2em 2em;
+    background: #fafafa;
+    border: 1px solid #ebebeb;
+}
+
+.nos-avatar {
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+}
+
 .logon-button {
 	width:  340px; 
 	height: 45px;
@@ -95,23 +392,15 @@ html, body {
 		font-size: 60px;
 	}
 
-.mdl-textfield {
-	width: 340px;
-}
-
 #errorLabel {
 	color: Red;
 }
-
 
 @media (max-width: 480px) {
     .logon-button {
     	width:  250px; 
     }
-    .mdl-textfield {
-	    width: 250px;
-    }
-
+   
     .default-form {
         width: 250px;
         margin: 4em auto;
@@ -120,204 +409,5 @@ html, body {
 
     .user-logon-icon {
 	    margin-left:   100px;
-	    
     }
-}
-
-
-
-
-
-
-
-/*------------------------------------------------------*\
-    #COLOR - SECTION - set main, help and subhelp colors
-\*------------------------------------------------------*/
-
-
-.mdl-color-text--nos-main {
-  color: rgb(0,131,143) !important; }
-
-.mdl-color--nos-main {
-  background-color: rgb(0,131,143) !important; }
-
-.mdl-color-text--nos-help {
-  color: rgb(0,151,167) !important; }  
-
-.mdl-color--nos-help {
-  background-color: rgb(0,151,167) !important; }
-
-.mdl-color--nos-subhelp {
-  background-color: rgb(19, 202, 233) !important; }
-
-
-
-
-
- .mdl-layout.is-small-screen .mdl-layout-title {
-      font-size: 18px;
- }
-
-
- .mdl-textfield--floating-label.is-focused .mdl-textfield__label,
-  .mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
-    color: rgb(0,131,143); 
-    font-size: 12px;  
-    top: 4px;
-    visibility: visible; }
-  .mdl-textfield--floating-label.is-focused .mdl-textfield__expandable-holder .mdl-textfield__label,
-  .mdl-textfield--floating-label.is-dirty .mdl-textfield__expandable-holder .mdl-textfield__label {
-    top: -16px; }
-  .mdl-textfield--floating-label.is-invalid .mdl-textfield__label {
-    color: rgb(222, 50, 38);
-    font-size: 12px; }
-  .mdl-textfield__label:after {
-    background-color: rgb(0,131,143); 
-    bottom: 20px;
-    content: '';
-    height: 2px;
-    left: 45%;
-    position: absolute;
-    -webkit-transition-duration: 0.2s;
-            transition-duration: 0.2s;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    visibility: hidden;
-    width: 10px; }
-
-
-
-  
-.nos-avatar {
-  width: 48px;
-  height: 48px;
-  border-radius: 24px;
-}
-
-.nos-layout .nos-header .mdl-textfield {
-  padding-top: 27px;
-}
-
-.nos-layout .mdl-layout__header .mdl-layout__drawer-button {
-  color: rgba(0, 0, 0, 0.54);
-}
-
-.mdl-layout__drawer .avatar {
-  margin-bottom: 16px;
-}
-.nos-drawer {
-  border: none;
-  background-color:#00838F;
-}
-
-/* iOS Safari specific workaround */
-.nos-drawer .mdl-menu__container {
-  z-index: -1;
-}
-
-.nos-drawer .nos-navigation {
-  z-index: -2;
-}
-
-/* END iOS Safari specific workaround */
-.nos-drawer .mdl-menu .mdl-menu__item {
-  display: flex;
-  align-items: center;
-}
-
-.nos-drawer-header {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding: 16px;
-  height: 151px;
-}
-
-.nos-avatar-dropdown {
-  display: flex;
-  position: relative;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-}
-
-.nos-navigation {
-  flex-grow: 1;
-  background-color:#0097A7;
-}
-
-.nos-layout .nos-navigation .mdl-navigation__link {
-  display: flex !important;
-  flex-direction: row;
-  align-items: center;
-  color: white;/*rgba(255, 255, 255, 0.56);*/
-  font-weight: 500;
-}
-
-.nos-layout .nos-navigation .mdl-navigation__link:hover {
-  background-color:#00838F;  /*#00838F; #0097A7;#00BCD4;*/
-  color: white;/*#37474F;*/
-}
-
-.nos-navigation .mdl-navigation__link .nav-icon {
-  font-size: 24px;
-  color: white;/*rgba(255, 255, 255, 0.56);*/
-  margin-right: 32px;
-}
-
-.nos-content {
-  max-width: 1080px;
-}
-	.nos-content a {
-		text-decoration: none;
-		color: rgba(0, 0, 0, 0.54);
-	}
-	
-	.nos-docs a
-	{
-		text-decoration: underline;	
-	}
-	
-	.nos-docs a:hover
-	{
-		text-decoration: none;
-		/*color: #0097A7;*/
-	}
-	
-.nos-graphs {
-  padding: 16px 32px;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-}
-/* TODO: Find a proper solution to have the graphs
- * not float around outside their container in IE10/11.
- * Using a browserhacks.com solution for now.
- */
-_:-ms-input-placeholder, :root .nos-graphs {
-  min-height: 664px;
-}
-_:-ms-input-placeholder, :root .nos-graph {
-  max-height: 300px;
-}
-/* TODO end */
-.nos-graph:nth-child(1) {
-  color: #00b9d8;
-}
-.nos-graph:nth-child(2) {
-  color: #d9006e;
-}
-
-.nav-icon {
-	margin-right: 30px;
-	margin-left: 5px;
-}
-
-.content-icon {
-	 margin-right: 10px;
-}
-
-.menu-icon {
-	margin-top: 10px;
 }
