--- a/Nosology.MVP/Nosology.MVP.UI.Site/Site.Master
+++ b/Nosology.MVP/Nosology.MVP.UI.Site/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Escyug.Escyug.Nosology.MVP.UI.Site.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Escyug.Nosology.MVP.UI.Site.SiteMaster" %>
 
 <!DOCTYPE html>
 
