--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/Content/jDialog/jDialog.css
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/Content/jDialog/jDialog.css
@@ -1,97 +1,136 @@
 .dialog {
-  font: 14px/1.5em tahoma, 'Microsoft yahei', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #555;
-  background-color: #fff;
-  border-radius: 5px;
-  border: 1px solid #ddd;
-  overflow: hidden;
-  width: 90%;
-  position: absolute;
-  left: 50%;
-  margin-left: -45%;
-  opacity: 1;
-  -webkit-transition: -webkit-transform 0.15s ease-in-out;
-  -webkit-transform: scale(0.85);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    background-color: white;
+    position: absolute;
+    width: 40%;
+    height: auto;
+    left: 35%;
+    margin-left: -5%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 1.2rem;
+    color: #555;
+    opacity: 1;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 
+                0 1px 10px 0 rgba(0, 0, 0, 0.12), 
+                0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    -webkit-transition: -webkit-transform 0.15s ease-in-out;
+    -webkit-transform: scale(0.85);
+       -moz-transform: scale(0.85);
+            transform: scale(0.85);
+    font-family: 'Roboto', 'Helvetica', sans-serif;
 }
-.dialog *,
-.dialog *:before,
-.dialog *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+
+@media (max-width: 479px) {
+    .dialog {
+        width: 80%;
+        left: 50%;
+        margin-left: -45%;
+    }
 }
-.dialog.dialog-toast {
-  background-color: rgba(0, 0, 0, 0.4);
-  border: none;
-  color: #fff;
+
+@media (min-width: 480px) and (max-width: 839px) {
+    .dialog {
+        width: 85%;
+        left: 50%;
+        margin-left: -45%;
+    }
 }
-.dialog.dialog-toast .dialog-body {
-  padding: 1em;
-}
-.dialog.dialog-error {
-  border-color: #ebccd1;
-}
-.dialog.dialog-error .dialog-header {
-  color: #a94442;
-  background-color: #f2dede;
-}
-.dialog.dialog-error .dialog-btn {
-  border-color: #ebccd1;
-}
-.dialog.dialog-zoom-in {
-  -webkit-transform: scale(1);
-}
+
+    .dialog *,
+    .dialog *:before,
+    .dialog *:after {
+        -webkit-box-sizing: border-box;
+           -moz-box-sizing: border-box;
+                box-sizing: border-box;
+    }
+
+    .dialog.dialog-toast {
+        background-color: rgba(0, 0, 0, 0.4);
+        border: none;
+        color: #FFF;
+    }
+
+        .dialog.dialog-toast .dialog-body {
+            padding: 1em;
+        }
+
+    .dialog.dialog-error {
+        border-color: #EBCCD1;
+    }
+
+        .dialog.dialog-error .dialog-header {
+            background-color: #F2DEDE;
+            color: #A94442;
+        }
+
+        .dialog.dialog-error .dialog-btn {
+            border-color: #EBCCD1;
+        }
+
+    .dialog.dialog-zoom-in {
+        -webkit-transform: scale(1);
+           -moz-transform: scale(1);
+                transform: scale(1);
+    }
+
 .dialog-header {
-  position: relative;
-  text-indent: 1em;
-  height: 3em;
-  line-height: 3em;
-  background-color: #f7f7f7;
-  font-size: 20px;
+    /*background-color: #F7F7F7;*/
+    position: relative;
+    /*height: 3rem;*/
+    /*text-indent: 1em;
+    line-height: 3em;
+    font-size: 20px;*/
 }
+
+    .dialog-header h2 {
+        margin: 2rem;
+    }
+
 .dialog-body {
-  padding: .5em;
-  word-break: break-all;
-  overflow-y: auto;
-  font-size: 16px;
-  height: 150px;
+    background-clip: padding-box;
+    position: relative;
+    /*padding: 2.4rem;*/
 }
-.dialog-body p {
-	font-size: 18px; /* #MY 16px*/
-	text-align: center;
-	margin-top: 50px;
-}
+
+    .dialog-body p {
+        margin: 0.5rem 2rem;
+        /*padding-top: 2rem;*/
+        font-size: 16px;
+        word-break: break-all;
+        word-wrap: break-word;
+    }
+
 .dialog-footer {
-  display: -webkit-box;
-  display: box;
-  font-size: 20px;
+    margin-top: 4rem;
+    /*margin-top: 2rem;*/
+    /*display: -webkit-box;
+    display: box;*/
 }
+
 .dialog-btn {
-  -webkit-box-flex: 1;
-  box-flex: 1;
-  display: block;
-  text-decoration: none;
-  text-align: center;
-  line-height : 2.5em;
-  height: 50px;
-  font-size: 20px;
-  /*line-height: 1.2em;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  color: inherit; */
-  /*padding: .8em 0;*/
-  margin: .8em;
-  -webkit-user-select: none;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 1rem 1.5rem;
+    /*margin: 1.2rem;*/
+    color: #0097A7;
+    /*display: block;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;*/
 }
-.dialog-btn.active {
-  opacity: .7;
-}
+
+    .dialog-btn.active {
+        opacity: .7;
+    }
+
 .dialog-btn-primary {
-  border-color: #e94543;
-  color: #fff;
-  background-color: #e94543;
+    background-color: #E94543;
+    border-color: #E94543;
+    color: #FFF;
 }
+
 .dialog-btn-dismiss {
-  position: absolute;
-  right: 1em;
+    position: absolute;
+    right: 1em;
 }
